# 88deobfuscator-batch

./: .gitignore  README.md  deobfuscate  pyproject.toml
src/deobfuscator/: cli.py  main.py  ui.py
src/deobfuscator/core/: abstract_decoder.py  code_executor.py  config.py  dependency_checker.py  exceptions.py  file_manager.py  pattern_matcher.py  patterns.py
src/deobfuscator/decoders/: __init__.py  baseX_compression_decoder.py  baseX_decoder.py  blank_decoder.py  christian_decoder.py  clever_decoder.py  compression_decoder.py  grandiosee_decoder.py  impostor_decoder.py  registry.py  rendy_decoder.py  xindex_decoder.py
src/deobfuscator/utils/: __init__.py  define_obf.py
