[project]
name = "88deobfuscator-batch"
version = "0.8.0"
description = "A Python script designed to deobfuscate various programs protected using popular obfuscation methods."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]

[tool.ruff]
extend-exclude = [
    "testfiles/",
]
